Add fibonacci function
