# docs/swagger.json
@@ -12,6 +12,56 @@
     "host": "localhost:8080",
     "basePath": "/user",
     "paths": {
+        "/user/fibonacci": {
+            "get": {
+                "description": "Calculate Fibonacci",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user management service"
+                ],
+                "summary": "Calculate Fibonacci",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Fibonacci Number",
+                        "name": "n",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Fibonacci Calculated Successfully",
+                        "schema": {
+                            "$ref": "#/definitions/domain.FibonacciResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/health": {
             "get": {
                 "description": "Health Check will return a message indicating that the user management service is up and running",
@@ -64,56 +114,6 @@
                         "description": "User Logged In Successfully",
                         "schema": {
                             "$ref": "#/definitions/domain.LoginSuccessResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Request",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/order/{username}": {
-            "get": {
-                "description": "Get order by order username",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user management service"
-                ],
-                "summary": "Get order by order username",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User Name",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Order Fetched Successfully",
-                        "schema": {
-                            "$ref": "#/definitions/domain.GetOrderByOrderUserNameResp"
                         }
                     },
                     "400": {
@@ -253,11 +253,11 @@
                 }
             }
         },
-        "domain.GetOrderByOrderUserNameResp": {
+        "domain.FibonacciResp": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/domain.GetOrderByOrderUserNameResponse"
+                    "type": "integer"
                 },
                 "message": {
                     "type": "string"
@@ -265,20 +265,6 @@
                 "success": {
                     "type": "boolean",
                     "example": true
-                }
-            }
-        },
-        "domain.GetOrderByOrderUserNameResponse": {
-            "type": "object",
-            "properties": {
-                "order_id": {
-                    "type": "string"
-                },
-                "product_name": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
                 }
             }
         },
